Slight update from 1520 projet

--- a/index.html
+++ b/index.html
@@ -13,16 +13,14 @@
         <ul>
           <li><a href="#aboutMe">About Me</a></li>
           <li><a href="#exp">Experience</a></li>
-          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </header>
     <section id="aboutMe">
       <img src="img/about_me.png" alt="Photo of Me" />
       <h2>Hi, I'm Matt</h2>
-      <p>I am a senior at the University of Pittsburgh studying computer science!</p>
-      <p>My main interest in computer science are in security and data.
-        I love seeing data visualized, and how it can be used to impact our daily lives.</p>
+      <p>I graduated in April of 2017 with a B.S. in Computer Science from the University of Pittsburgh</p>
+      <p>I currently work as a Java developer, working on a Java based webapp that also uses JavaScript including  angular and jQuery</p>
     </section>
     <section id="exp">
       <h2>Experience</h2>
@@ -35,9 +33,9 @@
         <section id="prog">
           <h3>Programming Languages</h3>
           <p>Java</p>
+          <p>HTML, CSS, and JavaScript</p>
+          <p>jQuery and Angular</p>
           <p>Oracle / SQL</p>
-          <p>HTML, PHP, and JavaScript</p>
-          <p>C</p>
         </section>
         <section id="work">
           <h3>Work Experience</h3>
@@ -52,20 +50,5 @@
         </section>
       </section>
     </section>
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <div id="hideForm">
-      <form method="get" name="contactMe" id="contactMe" onsubmit="return(validateForm());">
-        <label for="name"><div id="nameLabel">Name:</div></label>
-        <input type="text" name="name" />
-        <label for="email"><div id="emailLabel">Email:</div></label>
-        <input type="text" name="email" />
-        <textarea name="msg">Please Type Your Message</textarea>
-        <button type="submit" value="submit">Submit!</button>
-      </form>
-    </div>
-    </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="scripts/form.js"></script>
   </body>
 </html>
